MyParser.java
/* Generated By:JavaCC: Do not edit this line. MyParser.java */
        public class MyParser implements MyParserConstants {
                public static void main (String [] args){
                        MyParser tokeniser;
                        //write shit here
                        if ( args.length == 0){
                                System.out.println("Reading from standard input....");
                                tokeniser = new MyParser(System.in);
                        }else if (args.length == 1){
                                try{
                                        tokeniser = new MyParser(new java.io.FileInputStream(args[0]));
                                } catch (java.io.FileNotFoundException e) {
                                        System.err.println("File " + args[0] + " not found.");
                                        return;
                                }
                        }
                        else{

                                System.out.println("SLP Tokeniser: Usage is one of:");
                                System.out.println("java SLPTokeniser < inputfile");
                                System.out.println("OR");
                                System.out.println("java SLPTokeniser inputfile");
                                return;
                        }
                        /*
			* We’ve now initialised the tokeniser to read from the appropriate place,
			* so just keep reading tokens and printing them until we hit EOF
			*/
                        try {
                                tokeniser.Prog();
                        }catch(ParseException e) {
                                System.out.println(e.getMessage());
                                System.out.println("SLP Interpreter: Encountered errors during parse");
                        }
                        for (Token t = getNextToken(); t.kind!=EOF; t = getNextToken()) {
                                // Print out the actual text for the constants, identifiers etc.
                                if (t.kind==INTEGER)
                                {
                                        System.out.print("Integer");
                                        System.out.print("( Kind: " + t.kind + " Image: " + t.image + " ");
                                        System.out.println("Token: " + token + ")");
                                }
                                else if (t.kind==ID)
                                {
                                        System.out.print("Identifier");
                                        System.out.print("( Kind: " + t.kind + " Image: " + t.image + " ");
                                        System.out.println("Token: " + token + ")");
                                }
                                else{
                                        System.out.print("( Kind: " + t.kind + " Image: " + t.image + " ");
                                        System.out.println("Token: " + token + ")");
                                }
                        }
                }

/* 
 ___________________________
|                           |
|	SECTION FOUR        |
|       GRAMMAR RULES       |
|___________________________|
*/
  static final public void Prog() throws ParseException {
    trace_call("Prog");
    try {
      decl_list();
      func_list();
      main();
      jj_consume_token(0);
    } finally {
      trace_return("Prog");
    }
  }

  static final public void decl_list() throws ParseException {
    trace_call("decl_list");
    try {
      decl();
      jj_consume_token(SEMICOLUMN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECL_VARIABLE:
      case DECL_CONSTANT:
        decl_list();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } finally {
      trace_return("decl_list");
    }
  }

  static final public void decl() throws ParseException {
    trace_call("decl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECL_VARIABLE:
        var_decl();
        break;
      case DECL_CONSTANT:
        const_decl();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("decl");
    }
  }

  static final public void var_decl() throws ParseException {
    trace_call("var_decl");
    try {
      jj_consume_token(DECL_VARIABLE);
      jj_consume_token(ID);
      jj_consume_token(COLUMN);
      type();
    } finally {
      trace_return("var_decl");
    }
  }

  static final public void const_decl() throws ParseException {
    trace_call("const_decl");
    try {
      jj_consume_token(DECL_CONSTANT);
      jj_consume_token(ID);
      jj_consume_token(COLUMN);
      type();
      jj_consume_token(IS_VALUE);
      expression();
    } finally {
      trace_return("const_decl");
    }
  }

  static final public void type() throws ParseException {
    trace_call("type");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECL_INTEGER:
        jj_consume_token(DECL_INTEGER);
        break;
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("type");
    }
  }

  static final public void func_list() throws ParseException {
    trace_call("func_list");
    try {
      function();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECL_INTEGER:
      case VOID:
      case BOOLEAN:
        func_list();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    } finally {
      trace_return("func_list");
    }
  }

  static final public void function() throws ParseException {
    trace_call("function");
    try {
      type();
      jj_consume_token(ID);
      parameter_list();
      jj_consume_token(IS);
      decl_list();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IS_TRUE:
      case IS_FALSE:
      case OPEN_BRACKET:
      case MINUS_SIGN:
      case INTEGER:
      case ID:
        expression();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(END);
    } finally {
      trace_return("function");
    }
  }

  static final public void parameter_list() throws ParseException {
    trace_call("parameter_list");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        nemp_parameter_list();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } finally {
      trace_return("parameter_list");
    }
  }

  static final public void nemp_parameter_list() throws ParseException {
    trace_call("nemp_parameter_list");
    try {
      jj_consume_token(ID);
      jj_consume_token(COLUMN);
      type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nemp_parameter_list();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } finally {
      trace_return("nemp_parameter_list");
    }
  }

  static final public void main() throws ParseException {
    trace_call("main");
    try {
      jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      decl_list();
      statement_block();
      jj_consume_token(END);
    } finally {
      trace_return("main");
    }
  }

  static final public void statement_block() throws ParseException {
    trace_call("statement_block");
    try {
      statement();
      statement_block();
    } finally {
      trace_return("statement_block");
    }
  }

  static final public void statement() throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IS_VALUE:
          jj_consume_token(IS_VALUE);
          expression();
          break;
        case OPEN_BRACKET:
          jj_consume_token(OPEN_BRACKET);
          arg_list();
          jj_consume_token(CLOSE_BRACKET);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(SEMICOLUMN);
        break;
      case BEGIN:
        jj_consume_token(BEGIN);
        statement_block();
        jj_consume_token(END);
        break;
      case IF:
        jj_consume_token(IF);
        condition();
        jj_consume_token(BEGIN);
        statement_block();
        jj_consume_token(END);
        break;
      case ELSE:
        jj_consume_token(ELSE);
        jj_consume_token(BEGIN);
        statement_block();
        jj_consume_token(END);
        break;
      case WHILE:
        jj_consume_token(WHILE);
        condition();
        jj_consume_token(BEGIN);
        statement_block();
        jj_consume_token(END);
        break;
      case DO_SKIP:
        jj_consume_token(DO_SKIP);
        jj_consume_token(SEMICOLUMN);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

  static final public void expression() throws ParseException {
    trace_call("expression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IS_TRUE:
      case IS_FALSE:
      case MINUS_SIGN:
      case INTEGER:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS_SIGN:
          jj_consume_token(MINUS_SIGN);
          jj_consume_token(ID);
          break;
        case INTEGER:
          jj_consume_token(INTEGER);
          break;
        case IS_TRUE:
          jj_consume_token(IS_TRUE);
          break;
        case IS_FALSE:
          jj_consume_token(IS_FALSE);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_1:
        while (true) {
          binary_arith_op();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case MINUS_SIGN:
          case ID:
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case MINUS_SIGN:
              jj_consume_token(MINUS_SIGN);
              break;
            default:
              jj_la1[10] = jj_gen;
              ;
            }
            jj_consume_token(ID);
            break;
          case INTEGER:
            jj_consume_token(INTEGER);
            break;
          case IS_TRUE:
            jj_consume_token(IS_TRUE);
            break;
          case IS_FALSE:
            jj_consume_token(IS_FALSE);
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PLUS_SIGN:
          case MINUS_SIGN:
            ;
            break;
          default:
            jj_la1[12] = jj_gen;
            break label_1;
          }
        }
        break;
      case ID:
        jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPEN_BRACKET:
          jj_consume_token(OPEN_BRACKET);
          arg_list();
          jj_consume_token(CLOSE_BRACKET);
          break;
        case IS_TRUE:
        case IS_FALSE:
        case INTEGER:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER:
            jj_consume_token(INTEGER);
            break;
          case IS_TRUE:
            jj_consume_token(IS_TRUE);
            break;
          case IS_FALSE:
            jj_consume_token(IS_FALSE);
            break;
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          label_2:
          while (true) {
            binary_arith_op();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case MINUS_SIGN:
            case ID:
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case MINUS_SIGN:
                jj_consume_token(MINUS_SIGN);
                break;
              default:
                jj_la1[14] = jj_gen;
                ;
              }
              jj_consume_token(ID);
              break;
            case INTEGER:
              jj_consume_token(INTEGER);
              break;
            case IS_TRUE:
              jj_consume_token(IS_TRUE);
              break;
            case IS_FALSE:
              jj_consume_token(IS_FALSE);
              break;
            default:
              jj_la1[15] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case PLUS_SIGN:
            case MINUS_SIGN:
              ;
              break;
            default:
              jj_la1[16] = jj_gen;
              break label_2;
            }
          }
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case OPEN_BRACKET:
        jj_consume_token(OPEN_BRACKET);
        expression();
        jj_consume_token(CLOSE_BRACKET);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("expression");
    }
  }

  static final public void binary_arith_op() throws ParseException {
    trace_call("binary_arith_op");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS_SIGN:
        jj_consume_token(PLUS_SIGN);
        break;
      case MINUS_SIGN:
        jj_consume_token(MINUS_SIGN);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("binary_arith_op");
    }
  }

  static final public void condition() throws ParseException {
    trace_call("condition");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TILDA:
        jj_consume_token(TILDA);
        condition();
        break;
      default:
        jj_la1[20] = jj_gen;
        if (jj_2_1(2)) {
          jj_consume_token(OPEN_BRACKET);
          condition();
          jj_consume_token(CLOSE_BRACKET);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IS_TRUE:
          case IS_FALSE:
          case OPEN_BRACKET:
          case MINUS_SIGN:
          case INTEGER:
          case ID:
            expression();
            comp_op();
            expression();
            break;
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR_SIGN:
        jj_consume_token(OR_SIGN);
        break;
      case AND_SIGN:
        jj_consume_token(AND_SIGN);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      condition();
    } finally {
      trace_return("condition");
    }
  }

/*void condition(): {}
{
	( 
		( 
			(<OPEN_BRACKET> --going to cause conflict with expression last choice--
				( (<TILDA>)? expression() comp_op() expression() )
			<CLOSE_BRACKET>)
		)
		|
		(
			( <TILDA>)? expression() comp_op() expression() )
		( <OR_SIGN> | <AND_SIGN> ) //Issue is being caused here by recursive issue. Issue between [...]* and the tilda condition. It doesn't know whether to traverse back up the recusive tree or continue the [...]* if the next token is "|" 
		condition() 
	)//TODO prove logical equivalence of (( OR | AND )c) and (( OR | AND )c)*   
}*/
  static final public void comp_op() throws ParseException {
    trace_call("comp_op");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS_SIGN:
        jj_consume_token(EQUALS_SIGN);
        break;
      case NEGATION_EQUALS:
        jj_consume_token(NEGATION_EQUALS);
        break;
      case LESS_THAN:
        jj_consume_token(LESS_THAN);
        break;
      case EQUAL_LESS_THAN:
        jj_consume_token(EQUAL_LESS_THAN);
        break;
      case GREATER_THAN:
        jj_consume_token(GREATER_THAN);
        break;
      case EQUAL_GREATER_THAN:
        jj_consume_token(EQUAL_GREATER_THAN);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("comp_op");
    }
  }

  static final public void arg_list() throws ParseException {
    trace_call("arg_list");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        nemp_arg_list();
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
    } finally {
      trace_return("arg_list");
    }
  }

  static final public void nemp_arg_list() throws ParseException {
    trace_call("nemp_arg_list");
    try {
      jj_consume_token(ID);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        jj_consume_token(ID);
      }
    } finally {
      trace_return("nemp_arg_list");
    }
  }

  static final public int BinOp() throws ParseException {
    trace_call("BinOp");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS_SIGN:
        jj_consume_token(PLUS_SIGN);
                      {if (true) return 1;}
        break;
      case MINUS_SIGN:
        jj_consume_token(MINUS_SIGN);
                         {if (true) return 2;}
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("BinOp");
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_9() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(OPEN_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(OPEN_BRACKET)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(TILDA)) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_11()) {
    jj_scanpos = xsp;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(MINUS_SIGN)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_5()) {
    jj_scanpos = xsp;
    if (jj_3_1()) {
    jj_scanpos = xsp;
    if (jj_3R_6()) return true;
    }
    }
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MyParserTokenManager token_source;
  static JavaCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[27];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xa000,0xa000,0x214000,0x214000,0x80180000,0x0,0x8000000,0xc0000000,0x41c80,0x180000,0x0,0x180000,0x0,0x180000,0x0,0x180000,0x0,0x80180000,0x80180000,0x0,0x0,0x80180000,0x0,0x0,0x0,0x8000000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x9004,0x8000,0x0,0x0,0x8000,0x1004,0x4,0x9004,0x6,0x1000,0x4,0x9004,0x6,0x1000,0x9004,0x6,0x8,0x9004,0x30,0xfc0,0x8000,0x0,0x6,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MyParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MyParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MyParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MyParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new MyParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public MyParser(MyParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(MyParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 27; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      trace_token(token, "");
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }
